# airflow-provider-dremio

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
src/dremio_provider/: __init__.py
src/dremio_provider/example_dags/: example_manage_reflection.py
src/dremio_provider/hooks/: dremio.py
src/dremio_provider/operators/: dremio.py
src/dremio_provider/sensors/: dremio.py
src/dremio_provider/triggers/: dremio.py
tests/: conftest.py
tests/hooks/: test_dremio.py
